tests/ui/parser/keyword.rs
pub mod break {
    //~^ ERROR expected identifier, found keyword `break`
}

fn main() {}

// ferrocene-annotations: fls_lish33a1naw5
// Keywords
//
// ferrocene-annotations: fls_mec5cg5aptf8
// Strict Keywords
